<resources>
    <string name="app_name">Rent Ride</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg1">Please enter the lead driver details.</string>
    <string name="email">Email:</string>
    <string name="phoneNum">Phone Number:</string>
    <string name="country">Country/Region:</string>
    <string name="trips">Rides</string>
    <string name="complete">Trip Completed</string>
    <string name="review">Review</string>

    <string name="book">"Book Now" </string>
    <string name="Where_to">Where to?</string>
    <string name="From">From</string>
    <string name="Pick_up_Location">Pick-up Location</string>
    <string name="Drop_off_Location">Drop-off Location</string>
    <string name="Return_to_different_Location">Return to different Location?</string>
    <string name="Time">Pick up Time</string>
    <string name="Time1">Drop-off Time</string>
    <string name="Pick_up_Date">Pick-up Date</string>
    <string name="Drop_off_Date">Drop-off Date</string>
    <string name="Search_for_Car">Search for Car</string>
    <string name="days">No of days</string>
    <string name="Due_to_Covid_19_some_destinations_maybe_unavailable_for_certain_dates">
        Due to Covid-19,some destinations maybe unavailable for certain dates. </string>


    <string name="My_Trips">My Bookings</string>
    <string name="Trip1">24/09/2020, 11:30AM</string>
    <string name="Trip2">05/10/2020, 08:00AM</string>
    <string name="Vehicle1">Bajaj RE 205</string>
    <string name="Vehicle2">Honda Freed</string>
    <string name="Details">Details</string>

    <string name="My_Booking">My Booking</string>
    <string name="Pick_up_Details">Pick-up Details</string>
    <string name="Drop_off_Details">Drop-off Details</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="save">SAVE</string>
    <string name="title_activity_maps">Map</string>
    <string name="content">"We are the best way to move for people who don't have their own Car"</string>
    <string name="loc">Tap here to find your current location</string>
    <string name="car">Reserve Car</string>
    <string name="des">Rent fast and travel Smart !</string>
    <string name="invalid_name">Please Enter your Name</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="invalid_mobile">Enter Valid Number</string>
    <string name="invalid_password">Enter 6 digit password</string>

    <string name="app">Rent Ride</string>

    <string name="here">Here you go!!!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="OR">OR</string>
    <string name="Resister_Here">Register Here</string>

    <string name="passnegers">4 Passenger(s)</string>
    <string name="bags">2 Bag(s)</string>
    <string name="wifi">Wifi</string>
    <string name="seat">Child Toddler Seat</string>
    <string name="lkr">Rs</string>
    <string name="qty">Quantity</string>
    <string name="gps">GPS</string>
    <string name="name">Name*</string>
    <string name="email1">Email*</string>
    <string name="password">Password*</string>
    <string name="contact">Contact No*</string>
    <string name="Name">Atara Francis</string>
    <string name="Email">atara91@gmail.com</string>
    <string name="web">Web</string>
    <string name="graphic">Graphic</string>
    <string name="uiux">UI/UX</string>
    <string name="note">This profile is hidden</string>
    <string name="register">Register Now</string>
    <string name="edit">EDIT</string>


    <string name="txt_name">Name</string>
    <string name="txt_mobile">07XXXXXXXX</string>
    <string name="txt_email">person@email.com</string>
    <string name="txt_date">DD/MM/YYYY</string>
    <string name="txt_address">Address</string>
    <string name="txt_complaints"></string>
    <string name="btn_save">SAVE</string>
    <string name="btn_show">SHOW</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_update">UPDATE</string>

    <string name="btn_rating">Rating and Feedback</string>
    <string name="btn_complaint">Complaints</string>
    <string name="nbtn_submit">SUBMIT</string>

    <string name="Card">Credit or Debit Card</string>
    <string name="Date">MM/YY</string>
    <string name="cvv">123</string>
    <string name="No">xxxx xxxx xxxx xxxx</string>
    <string name="Submit">Submit</string>
    <string name="Show">Show</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="check">CHECK</string>
    <string name="select_a_payment_method">select a payment method</string>
    <string name="todo">TODO</string>
    <string name="card">CARD</string>
    <string name="cash">CASH</string>
    <string name="title_activity_rating">Rating</string>



</resources>