<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wave"
    android:scrollbarSize="7dp"
    android:scrollbarStyle="insideInset"
    android:padding="10dp"
    tools:context=".MainActivity">

    <!-- Header aligned to top -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pick_up_Location"
            android:layout_marginTop="45dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Inputpick"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/From"
            android:inputType="textPostalAddress"
            app:drawableEndCompat="@drawable/search"
            android:paddingLeft="15dp"
            app:drawableStartCompat="@drawable/ic_action_pickup" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Return_to_different_Location"
            android:textColor="#E5E5EC"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_action_check" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Drop_off_Location"
            android:layout_marginTop="15dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Inputdrop"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/Where_to"
            android:inputType="textPostalAddress"
            android:paddingLeft="15dp"
            app:drawableEndCompat="@drawable/search"
            app:drawableStartCompat="@drawable/ic_action_pickup" />

        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:id="@+id/txtpickdate"
            android:hint="@string/Pick_up_Date"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:drawableEnd="@drawable/drop"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_action_date2"
            android:drawableRight="@drawable/drop"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_action_date2" />


        <EditText
            android:id="@+id/Inputpicktime"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginLeft="190dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_action_time"
            android:ems="10"
            android:hint="@string/Time"
            android:inputType="time"
            android:paddingLeft="15dp"
            android:layout_marginTop="-40dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_action_time" />

        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:id="@+id/txtdropdate"
            android:drawableEnd="@drawable/drop"
            android:background="@drawable/input"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_action_date2"
            android:drawableRight="@drawable/drop"
            android:hint="@string/Drop_off_Date"
            android:drawableLeft="@drawable/ic_action_date2" />

        <EditText
            android:id="@+id/Inputdroptime"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="-40dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_action_time"
            android:ems="10"
            android:hint="@string/Time1"
            android:paddingLeft="15dp"
            android:inputType="time"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_action_time" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="80dp"
            android:text="Days" />

        <TextView
            android:id="@+id/result"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-42dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:background="@drawable/input"
            android:hint="@string/days" />

        <Button
            android:id="@+id/btnok"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/but"
            android:text="@string/Search_for_Car"
            android:textColor="#fff"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="45dp"
            android:text="@string/Due_to_Covid_19_some_destinations_maybe_unavailable_for_certain_dates"
            android:textColor="#fff"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>

