<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyBooking">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">


    </RelativeLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="579dp"
        android:text="@string/Pick_up_Details"
        android:textColor="#20205C"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="69dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="321dp"
        android:text="@string/Drop_off_Details"
        android:textColor="#20205C"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginRight="68dp"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/Inputpickdate"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="440dp"
        android:background="@drawable/text1"
        android:ems="10"
        android:paddingLeft="10dp"
        android:hint="@string/Pick_up_Date"
        android:inputType="date"
        android:drawableStart="@drawable/ic_action_date2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:drawableLeft="@drawable/ic_action_date2" />


    <EditText
        android:id="@+id/Inputpicktime"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="378dp"
        android:background="@drawable/text1"
        android:ems="10"
        android:paddingLeft="10dp"
        android:inputType="time"
        android:hint="@string/Time"
        android:drawableStart="@drawable/ic_action_time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:drawableLeft="@drawable/ic_action_time" />


    <EditText
        android:id="@+id/Inputdropdate"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="185dp"
        android:background="@drawable/text1"
        android:ems="10"
        android:paddingLeft="10dp"
        android:inputType="date"
        android:hint="@string/Drop_off_Date"
        android:drawableStart="@drawable/ic_action_date2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="33dp"
        android:drawableLeft="@drawable/ic_action_date2" />



    <EditText
        android:id="@+id/Inputdroptime"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/text1"
        android:ems="10"
        android:paddingLeft="10dp"
        android:inputType="time"
        android:hint="@string/Time1"
        android:drawableStart="@drawable/ic_action_time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="34dp"
        android:drawableLeft="@drawable/ic_action_time" />


    <Button
        android:id="@+id/Cancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/but"
        android:drawableEnd="@drawable/delete"
        android:text="@string/Cancel"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="209dp"
        android:drawableRight="@drawable/delete" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/but"
        android:drawableEnd="@drawable/next"
        android:text="@string/Next"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="57dp"
        android:drawableRight="@drawable/next" />

    <EditText
        android:id="@+id/Inputpick"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="508dp"
        android:background="@drawable/text1"
        android:ems="10"
        android:hint="@string/From"
        android:paddingLeft="10dp"
        android:inputType="textPostalAddress"
        android:drawableStart="@drawable/ic_action_pickup"
        android:layout_alignParentRight="true"
        android:layout_marginRight="39dp"
        android:drawableLeft="@drawable/ic_action_pickup" />


    <EditText
        android:id="@+id/Inputdrop"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/text1"
        android:ems="10"
        android:paddingLeft="10dp"
        android:hint="@string/Where_to"
        android:inputType="textPostalAddress"
        android:drawableStart="@drawable/ic_action_pickup"
        android:layout_alignParentRight="true"
        android:layout_marginRight="33dp"
        android:drawableLeft="@drawable/ic_action_pickup" />

    <Button
        android:id="@+id/Update"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="622dp"
        android:background="@drawable/but"
        android:drawableEnd="@drawable/edit"
        android:drawableRight="@drawable/edit"
        android:text="@string/save"
        android:paddingRight="10dp"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>