<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarSize="7dp"
    android:scrollbarStyle="insideInset"
    android:padding="10dp"
    tools:context=".book">


    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:text="@string/content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/design"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="30dp"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="#000066"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="179dp"
            android:layout_height="75dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/input"
            android:gravity="center_horizontal"
            android:text="@string/loc"
            android:textAlignment="center"
            android:textColor="#000066"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/butlocation"
            android:layout_width="61dp"
            android:layout_height="62dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="-70dp"
            android:background="@drawable/locationbutton"
             android:drawableEnd="@drawable/location"
            android:drawableRight="@drawable/location"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/btnres"
            android:layout_width="191dp"
            android:layout_height="62dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="80dp"
            android:drawableStart="@drawable/car"
            android:text="@string/car"
            android:textStyle="bold"
            android:drawableLeft="@drawable/car" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-650dp"
            android:background="@drawable/my"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/des"
            android:textSize="20sp"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="40dp"
            android:textColor="#000066"
            android:textStyle="bold"/>


    </LinearLayout>


</FrameLayout>