<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account">

    <!-- TODO: Update blank fragment layout -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/gomz" />

    <TextView
        android:id="@+id/name_dis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="190dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_dis"
        android:text="@string/web"
        android:textSize="18sp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="80dp"
        />

    <TextView
        android:id="@+id/jobs1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="17sp"
        android:layout_below="@+id/name_dis"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="130dp"
        />


    <TextView
        android:id="@+id/jobs2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graphic"
        android:textSize="20sp"
        android:layout_below="@+id/name_dis"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="150dp"
        />

    <TextView
        android:id="@+id/jobs3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="17sp"
        android:layout_below="@+id/name_dis"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="230dp"
        />

    <TextView
        android:id="@+id/jobs4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uiux"
        android:layout_below="@+id/name_dis"
        android:textSize="20sp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="250dp"
        />

    <ImageView
        android:id="@+id/fb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/fb"
        android:layout_below="@+id/jobs"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="85dp"

        />

    <ImageView
        android:id="@+id/insta"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:src="@drawable/insta"
        android:layout_below="@+id/jobs"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="165dp"
        />

    <ImageView
        android:id="@+id/tweeter"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@+id/jobs"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/tweet" />

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="188dp"
        android:layout_height="32dp"
        android:layout_below="@+id/insta"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/etc"
        android:hint="View Details" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_details"
        android:layout_marginTop="450dp"
        android:src="@drawable/ic_baseline_lock_24" />

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock"
        android:layout_marginTop="480dp"
        android:gravity="center"
        android:text="@string/note"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</FrameLayout>