<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    android:padding="10dp">
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/image"
        android:src="@mipmap/ic_launcher_round"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Car Name"
        android:id="@+id/image_name"
        android:layout_toRightOf="@+id/image"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="60dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passnegers"
        android:id="@+id/details_list"
        android:layout_toRightOf="@+id/image"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="55dp"
        android:textSize="15sp"
        />
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_baseline_card_travel_24"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="85dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bags"
        android:id="@+id/details_list1"
        android:layout_toRightOf="@+id/image"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="80dp"
        android:textSize="15sp"
        />
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_baseline_wifi_24"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="105dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:id="@+id/details_list2"
        android:layout_toRightOf="@+id/image"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="105dp"
        android:textSize="15sp"
        />




</RelativeLayout>